# hecto

./: Cargo.toml  TODO.md  rustfmt.toml
src/: discord_rpc.rs  document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs
