[package]
name = "hecto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
clipboard = "0.5.0"
crossterm = "0.23.2"
discord-rpc-client = "0.3.0"
sysinfo = "0.23.13"
unicode-segmentation = "1"
